Video shows extra padding on Divi theme - FIXED

--- a/assets/css/partials/_oembed.scss
+++ b/assets/css/partials/_oembed.scss
@@ -25,3 +25,9 @@
   }
 }
 
+.geodir-embed-container {
+    .fluid-width-video-wrapper {
+        padding: 0 !important;
+        position: initial;
+    }
+}
